fix CSS cropping at smaller viewport height

--- a/client/main.css
+++ b/client/main.css
@@ -21,6 +21,7 @@
 
 #root {
     height: 100%;
+    min-height: 700px;
 }
 
 .main_panel {
@@ -92,6 +93,10 @@
 }
 
 @media only screen and (max-width: 1345px) {
+    #root {
+        min-height: 1300px;
+    }
+
     .content_wrapper {
       flex-direction: column;
       flex-wrap: nowrap;
